<resources>
    <string name="app_name">Rotang Calculator</string>
    <string name="length_button_description">Кнопка для розрахунку довжини лінії</string>
    <string name="length_line">Довжина смужки</string>
    <string name="price">Ціна кошика</string>
    <string name="divider">Разделитель</string>
    <string name="choose_calculator">Обери калькулятор</string>
    <string name="back_description">Кнопка повернутися назад</string>
    <string name="result">Результат</string>
    <string name="price_basket">Ціна кошика</string>
    <string name="height">Висота (см)</string>
    <string name="width_basket">Ширина (см)</string>
    <string name="length_basket">Довжина (см)</string>
    <string name="with_cover">Потрібна кришка?</string>
    <string name="to_calculate">Розархувати</string>
    <string name="ic_length_description">Іконка довжини смужки</string>
    <string name="hint_high_diameter">Окружність зверху (см)</string>
    <string name="hint_lower_diameter">Окружність знизу (см)</string>
    <string name="hint_length">Довжина стояка (см)</string>
    <string name="hint_number">Кількість стояків</string>
    <string name="hint_width">Ширина ротанга (см)</string>
    <string name="error">Заповніть поле</string>
    <string name="title_main">Обери калькулятор</string>
    <string name="clear_button">Кнопка для очищення всіх значень</string>
    <string name="coefficient">Коефіцієнт: %.2f</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_name">Назва нотатки</string>
    <string name="dialog_title">Збереження нотатки</string>
    <string name="delete_dialog_title">Видалення нотатки</string>
    <string name="dialog_message">Вкажіть назву під якою буде збережена нотатка.</string>
    <string name="delete_dialog_message">Ви дійсно бажаєте видалити цей запис назавжди?</string>
    <string name="dialog_error">Вкажіть назву нотатки!</string>
    <string name="save">Зберегти</string>
    <string name="cancel">Відміна</string>
    <string name="save_warning">Перед збереженням натисніть кнопку "Розрахувати"</string>
    <string name="note_is_saved">Нотатку збережено</string>
    <string name="note_list">Список нотаток</string>
    <string name="edit_button">Edit button</string>
    <string name="delete_button">Delete Button</string>
    <string name="tv_high_diameter">Окружність зверху: %d см</string>
    <string name="tv_lower_diameter">Окружність знизу: %d см</string>
    <string name="tv_length">Довжина стояка: %d см</string>
    <string name="tv_width">Ширина ротанга: %s см</string>
    <string name="tv_number">Кількість стояків: %d</string>
    <string name="line_length">Довжина лінії:</string>
    <string name="tv_result">%d см</string>
    <string name="note_list_button">Кнопка вибору списку нотаток</string>
</resources>