<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
android:orientation="vertical"
tools:context=".presentation.PriceBasketFragment">

<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/back_description"
            android:onClick="onClickBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/price_basket"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18sp"
            android:textColor="@color/content"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/icBack"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:onClick="onClickClear"
            android:contentDescription="@string/clear_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cleaning"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.appbar.AppBarLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilHeight"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="24dp"
    app:boxBackgroundMode="outline"
    app:boxStrokeColor="#845442"
    app:endIconMode="clear_text"
    app:helperTextTextColor="@color/content"
    app:hintTextColor="#845442">

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/height"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="14sp"
        tools:ignore="SpeakableTextPresentCheck" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilWidth"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    app:boxStrokeColor="#845442"
    app:endIconMode="clear_text"
    app:helperTextTextColor="@color/content"
    app:hintTextColor="#845442">

    <EditText
        android:id="@+id/etWidth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/width_basket"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="14sp"
        tools:ignore="SpeakableTextPresentCheck" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilLength"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    app:boxStrokeColor="#845442"
    app:endIconMode="clear_text"
    app:helperTextTextColor="@color/content"
    app:hintTextColor="#845442">

    <EditText
        android:id="@+id/etLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/length_basket"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="14sp"
        tools:ignore="SpeakableTextPresentCheck" />
</com.google.android.material.textfield.TextInputLayout>

<TextView
    android:id="@+id/coefficientTextView"
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="4dp"
    android:fontFamily="@font/roboto_regular"
    android:text="@string/coefficient"
    android:textColor="@color/content"
    android:textSize="14sp"/>

<SeekBar
    android:id="@+id/seekBar"
    style="@style/MySeekBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:max="100"
    android:progress="45"/>

<CheckBox
    android:id="@+id/withCover"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="18dp"
    android:text="@string/with_cover"
    android:textColor="@color/content"
    android:buttonTint="@color/content"/>

<Button
    android:id="@+id/btResult"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="24dp"
    android:backgroundTint="#845442"
    android:fontFamily="@font/roboto_regular"
    android:onClick="onClickResult"
    android:text="@string/to_calculate"
    android:textColor="#F9F4EA"
    android:textStyle="bold"
    app:cornerRadius="8dp" />

</LinearLayout>