<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/myToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/choose_calculator"
                android:fontFamily="@font/roboto_medium"
                android:textSize="18sp"
                android:textColor="@color/content"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="buttonLengthSize,textViewLengthLine,icLength" />

    <ImageView
        android:id="@+id/buttonLengthSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/length_button_description"
        android:onClick="onClickLengthSize"
        android:src="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPrice" />

    <TextView
        android:id="@+id/textViewLengthLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="2dp"
        android:text="@string/length_line"
        android:fontFamily="@font/roboto_regular"
        android:textSize="15sp"
        android:textColor="@color/content"
        app:layout_constraintEnd_toEndOf="@+id/buttonLengthSize"
        app:layout_constraintStart_toStartOf="@+id/buttonLengthSize"
        app:layout_constraintTop_toTopOf="@id/buttonLengthSize" />

    <ImageView
        android:id="@+id/icLength"
        android:layout_width="110dp"
        android:layout_height="84dp"
        android:layout_marginStart="2dp"
        android:contentDescription="@string/ic_length_description"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLengthSize"
        app:layout_constraintEnd_toEndOf="@+id/buttonLengthSize"
        app:layout_constraintStart_toStartOf="@+id/buttonLengthSize"
        app:layout_constraintTop_toBottomOf="@+id/textViewLengthLine"
        app:layout_constraintVertical_bias="0.37"
        app:srcCompat="@drawable/ic_length" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="buttonPrice,textViewPrice, icPrice"   />

    <ImageView
        android:id="@+id/buttonPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/length_button_description"
        android:onClick="onClickPrice"
        android:src="@drawable/shape"
        app:layout_constraintBottom_toTopOf="@+id/buttonLengthSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="2dp"
        android:text="@string/price"
        android:textColor="@color/content"
        android:fontFamily="@font/roboto_regular"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonPrice"
        app:layout_constraintStart_toStartOf="@+id/buttonPrice"
        app:layout_constraintTop_toTopOf="@+id/buttonPrice" />

    <ImageView
        android:id="@+id/icPrice"
        android:layout_width="98dp"
        android:layout_height="88dp"
        android:layout_marginStart="2dp"
        android:contentDescription="@string/ic_length_description"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPrice"
        app:layout_constraintEnd_toEndOf="@+id/buttonPrice"
        app:layout_constraintStart_toStartOf="@+id/buttonPrice"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrice"
        app:layout_constraintVertical_bias="0.37"
        app:srcCompat="@drawable/ic_price" />




</androidx.constraintlayout.widget.ConstraintLayout>